feat: implement IGenericRepository interface, GenericRepository class and BaseEntity class.
IGenericRepository contains CRUD opperations that are implemented in GenericRepository class.
Also all models now inherit from BaseEntity class for more safety and easy to update them.

--- a/CMS.RepositoryLayer/CMS.RepositoryLayer.csproj
+++ b/CMS.RepositoryLayer/CMS.RepositoryLayer.csproj
@@ -55,11 +55,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="GenericRepository.cs" />
+    <Compile Include="IGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CMS.ModelLayer\CMS.ModelLayer.csproj">
+      <Project>{c75213d5-a1a8-42de-9475-964c318f2d0d}</Project>
+      <Name>CMS.ModelLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
