--- a/CMS.ModelLayer/CMS.ModelLayer.csproj
+++ b/CMS.ModelLayer/CMS.ModelLayer.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Article.cs" />
+    <Compile Include="BaseEntity.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="User.cs" />
