--- a/CMS.ServiceLayer/CMS.ServiceLayer.csproj
+++ b/CMS.ServiceLayer/CMS.ServiceLayer.csproj
@@ -54,12 +54,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ArticleService.cs" />
+    <Compile Include="CategoryService.cs" />
+    <Compile Include="CommentService.cs" />
+    <Compile Include="IArticleService.cs" />
+    <Compile Include="ICategoryService.cs" />
+    <Compile Include="ICommentService.cs" />
+    <Compile Include="UserService.cs" />
+    <Compile Include="EntityService.cs" />
+    <Compile Include="IUserEntity.cs" />
+    <Compile Include="IEntityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CMS.ModelLayer\CMS.ModelLayer.csproj">
+      <Project>{c75213d5-a1a8-42de-9475-964c318f2d0d}</Project>
+      <Name>CMS.ModelLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CMS.RepositoryLayer\CMS.RepositoryLayer.csproj">
+      <Project>{b3e8d051-38b8-48b8-9256-43c2d0100236}</Project>
+      <Name>CMS.RepositoryLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
