some refrences changed or added. add a few view for controller such as Users. add HashPass class to encrypt passwords with SHA256. add PersianCalendar to show in menus and views.

--- a/CMS.ModelLayer/CMS.ModelLayer.csproj
+++ b/CMS.ModelLayer/CMS.ModelLayer.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Migrations\202305190132049_editArticleTable.designer.cs">
       <DependentUpon>202305190132049_editArticleTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202306031327542_editUser.cs" />
+    <Compile Include="Migrations\202306031327542_editUser.designer.cs">
+      <DependentUpon>202306031327542_editUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="User.cs" />
     <Compile Include="CMSContext.cs" />
@@ -91,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202305190132049_editArticleTable.resx">
       <DependentUpon>202305190132049_editArticleTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306031327542_editUser.resx">
+      <DependentUpon>202306031327542_editUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
