--- a/CMSArticle/Web.config
+++ b/CMSArticle/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-      <forms name="CookiesLogin" defaultUrl="/" loginUrl="/User/Login" timeout="10000" />
+      <forms name="CookiesLogin" defaultUrl="/" loginUrl="/Login/Login" timeout="10000" />
     </authentication>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
